Ardak: Update WPA notebooks; add model evaluation; refresh README - Modified behavior_2016_2024_wpa.ipynb (updated analysis/plots) - Added model_evaluation.ipynb (DR/IPS/DM evaluation workflow) - Added artifacts/behavior_policy.joblib (serialized behavior model) - Updated README.md with run notes

--- a/behavior_2016_2024_wpa.ipynb
+++ b/behavior_2016_2024_wpa.ipynb
@@ -713,6 +713,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6126c26d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Save Logistic Regression model for further evaluation\n",
+    "import os, joblib\n",
+    "os.makedirs(\"artifacts\", exist_ok=True)\n",
+    "joblib.dump(beh_model, \"artifacts/behavior_policy.joblib\", compress=3)\n",
+    "print(\"Saved behavior policy to artifacts/behavior_policy.joblib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 60,
    "id": "a40cb35b",
    "metadata": {},
